--- a/AboutUs/templates/aboutus.html
+++ b/AboutUs/templates/aboutus.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html' %}
 {% load static %}
+{% block stylesheet %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles_aboutUs.css' %}">
+{% endblock stylesheet %}
 
 {% block content %}
 <div class="about-image size-logo banner-img" style="color: #FFFF; padding:7%">
