--- a/Events/templates/zenith.html
+++ b/Events/templates/zenith.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 {% load static %}
+
+{% block stylesheet %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles_events.css' %}">
+{% endblock stylesheet %}
+
 {% block content %}
 
 <div class="ach-image size-logo header-pad banner-img" style="color: #FFFF;">
