--- a/Events/templates/pleiades.html
+++ b/Events/templates/pleiades.html
@@ -1,7 +1,11 @@
 {% extends 'layout.html' %}
 {% load static %}
-{% block content %}
 
+{% block stylesheet %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles_events.css' %}">
+{% endblock stylesheet %}
+
+{% block content %}
 <div class="pleiades-image size-logo banner-img" style="color: #FFFF; padding:8%">
     <div><img src="{% static 'images/Logowhite.png' %}" alt="Zenith logo" style="height:4.5rem; padding-right:8rem;"><p class="title-a text-center"style="padding-left: 10rem; color: #1de9b6; padding-top: 2.5rem; font-size: 180%;"> | PLEIADES</p><hr class="titlehr" /></div>
 </div>
