--- a/Events/templates/utkarsh.html
+++ b/Events/templates/utkarsh.html
@@ -1,5 +1,10 @@
-{% extends 'layout.html' %} {% load static %} {% block content %}
+{% extends 'layout.html' %} {% load static %}
 
+{% block stylesheet %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles_events.css' %}">
+{% endblock stylesheet %}
+
+{% block content %}
 <div class="ach-image utkarsh-logo header-pad banner-img" style="color: #ffff;">
     <img src="{% static 'images/utkarsh1.png' %}" alt="Utkarsh-logo" />
 </div>
