--- a/Gallery/static/styles_gallery.css
+++ b/Gallery/static/styles_gallery.css
@@ -1,67 +1,50 @@
-
-
-.gallery {
-    padding: 2rem;
-    position: relative;
-    z-index: 1;
-}
-
-.gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1.5rem;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.gallery-link {
-    text-decoration: none;
-}
-
-.gallery-item {
-    position: relative;
+/*----------PhotoGallery----------------*/
+.gallery .gallery-item {
     overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    cursor: pointer;
+    border-right: 3px solid #fff;
+    border-bottom: 3px solid #fff;
 }
 
-.gallery-item:hover {
-    transform: scale(1.05);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+.gallery .gallery-item img {
+    transition: all ease-in-out 0.4s;
 }
 
-.gallery-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.5s ease, filter 0.5s ease;
-}
-
-.gallery-item:hover img {
+.gallery .gallery-item:hover img {
     transform: scale(1.1);
-    filter: blur(2px);
 }
 
-.gallery-hover {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 1rem;
-    text-align: center;
-    color: white;
-    opacity: 0;
-    transition: opacity 0.5s ease;
+/*----------VideoGallery----------------*/
+.video .video-box {
+    background-size: cover;
+    min-height: 300px;
+    border-radius: 50%;
 }
 
-.gallery-item:hover .gallery-hover {
-    opacity: 1;
+@media (max-width: 630px) {
+    .videowrap {
+        position: relative;
+        overflow: hidden;
+        width: 80%;
+        padding-top: 56.25% !important;
+        margin-bottom: 10%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .videowrap iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
-h3 {
-    margin: 0;
-    font-size: 1.5rem;
+@media (min-width: 1200px) {
+    .video .video-box {
+        margin-left: 15px;
+        margin-right: -15px;
+    }
 }
