--- a/Gallery/templates/videogallery.html
+++ b/Gallery/templates/videogallery.html
@@ -1,4 +1,10 @@
-{% extends 'layout.html' %} {% load static %} {% block content %}
+{% extends 'layout.html' %} {% load static %} 
+
+{% block stylesheet %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles_gallery.css' %}">
+{% endblock stylesheet %}
+
+{% block content %}
 
 <div class="ach-image size-logo banner-img" style="color: #ffff; padding: 7%;">
     <div>
