--- a/Events/templates/pleiades.html
+++ b/Events/templates/pleiades.html
@@ -34,7 +34,7 @@
                 <hr class="titlehr" />
             </div>
             <div class="row justify-content-md-center">
-                {% for event in events %}
+                {% for event in pleiades %}
                 <div class="col-lg-4 col-md-6 work-item">
                     <div class="work-wrap">
                     <img src="{{event.image.url}}" class="img-fluid" alt="">
