--- a/Events/templates/utkarsh.html
+++ b/Events/templates/utkarsh.html
@@ -33,7 +33,7 @@
                 <hr class="titlehr" />
             </div>
             <div class="row justify-content-md-center">
-                {% for event in events %}
+                {% for event in utkarsh %}
                 <div class="col-lg-4 col-md-6 work-item">
                     <div class="work-wrap">
                         <img src="{{event.image.url}}" class="img-fluid" alt="" />
