--- a/Events/templates/zenith.html
+++ b/Events/templates/zenith.html
@@ -34,7 +34,7 @@
             <div class="line-mf"></div>
             </div>
             <div class="row work-container justify-content-md-center">
-            {% for event in events %}
+            {% for event in zenith %}
             <div class="col-lg-4 col-md-6 work-item">
                 <div class="work-wrap">
                 <img src="{{event.image.url}}" class="img-fluid" alt="">
