--- a/HomePage/templates/home.html
+++ b/HomePage/templates/home.html
@@ -40,7 +40,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="owl-carousel slider-carousel">
-                    {% for activity in club_activity %}
+                    {% for activity in content.clubactivity %}
                     <div class="col-lg-12 work-item">
                         <div class="work-box">
                             <a href="{{activity.image.url}}" data-gall="work-Gallery" title="{{activity.activity}}" class="venobox">
@@ -69,13 +69,13 @@
             <hr class="titlehr" />
         </div>
         <div class="row">
-            {% for event in events_intro %} {% for link in links %} {% if link.linkname == event.topic %}
+            {% for fest in content.fests %} {% for link in links %} {% if link.linkname == fest.topic %}
             <div class="col-lg-4">
-                <img src="{{event.image.url}}" alt="" class="img-fluid" style="height: 12rem" />
+                <img src="{{fest.image.url}}" alt="" class="img-fluid" style="height: 12rem" />
             </div>
             <div class="col-lg-6" style="padding-bottom: 2rem; color: white">
                 <a href="{{link.link}}"><h4 class="text-center p-2" style="font-weight: bold; color: white">{{event.topic}}</h4></a>
-                <p class="font-italic">{{event.description|safe}}</p>
+                <p class="font-italic">{{fest.description|safe}}</p>
                 <div class="work-links">
                     <a href="{{link.link}}" title="More Details">Know More <i class="fa fa-link"></i></a>
                 </div>
@@ -94,7 +94,7 @@
             <div class="line-mf"></div>
         </div>
         <div class="row work-container justify-content-md-center">
-            {% for project in future_projects %}
+            {% for project in content.projects %}
             <div class="col-lg-4 col-md-6 work-item">
                 <div class="work-wrap">
                     <img src="{{project.image.url}}" class="img-fluid" alt="" />
@@ -120,10 +120,10 @@
         <hr class="titlehr" />
         <div class="line-mf"></div>
     </div>
-    {% for ach in achievements %}
+    {% for achievement in content.achievements %}
     <h2 class="text-center py-2">
-        <i class="fa fa-star pb-2 px-1" aria-hidden="true" style="font-size: 23px"></i> {{ ach.achievement }}
-        <a href="{{ ach.link }}" target="_blank"><i class="fa fa-hand-pointer-o fa-sm" aria-hidden="true"></i></a>
+        <i class="fa fa-star pb-2 px-1" aria-hidden="true" style="font-size: 23px"></i> {{ achievement.achievement }}
+        <a href="{{ achievement.link }}" target="_blank"><i class="fa fa-hand-pointer-o fa-sm" aria-hidden="true"></i></a>
     </h2>
     {% endfor %}
 </div>
