--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
         <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-            <a class="navbar-brand mr-auto" href="{% url 'home' %}"><img src="{% static 'images/STAClogo.png' %}" class="img-fluid" alt="STAC"></a>
+            <a class="navbar-brand mr-auto" href="{% url 'homepage' %}"><img src="{% static 'images/STAClogo.png' %}" class="img-fluid" alt="STAC"></a>
             <div class="container">
                 <div class="ml-auto mr-5">
                     <button class="navbar-toggler toggle-button" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,8 +12,8 @@
                 </div>
                 <div class="navbar-collapse collapse"  id="navbarDefault">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item {{home}}">
-                            <a class="nav-link" href={% url 'home' %}>Home</a>
+                        <li class="nav-item {{homepage}}">
+                            <a class="nav-link" href={% url 'homepage' %}>Home</a>
                         </li>
                         <li class="nav-item dropdown {{events_}}">
                             <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Events</a>
