--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="url" content="https://stac.iitmandi.co.in">
   <meta name="keywords" content="STAC, IIT, Mandi, Space, Technology, Astronomy"/>
-  <meta name="description" content="Official website of Space and Astronomy Cell, IIT Mandi. STAC organises astronomy events like AstraX, Zenith and talks on various astronomy topics.">
-  <meta name="author" content="STAC Web Development Team"/>
+  <meta name="description" content="Official website of Space and Astronomy Cell, IIT Mandi.">
+  <meta name="author" content="Vinamra Garg"/>
   <!--Favicon -->
   <link rel="icon" href="{% static 'stac_iitmandi/favicon/favicon.ico' %}">
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'stac_iitmandi/favicon/apple-touch-icon.png' %}">
